test/types/integral/integralvariable2.good
integralvariable2.chpl:1: error: variable 'r' is not initialized
note: generic type integral does not support default initialization
integralvariable2.chpl:1: error: split initialization is not supported for globals
